# GeneralCXXTemplate

./: CMakeLists.txt  README.md  init_documentation.sh  runAll.sh  runTests.sh  run_all.sh  run_application.sh
includes/: TestingClass.h
src/: CMakeLists.txt
tests/: CMakeLists.txt
